--- a/tootoo/r3/utilities/make-github-readme/index.html
+++ b/tootoo/r3/utilities/make-github-readme/index.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-window.location.href = 'make-github-readme-r1.html' + location.hash;
+window.location.href = '../../../../index.html#tootoo/r3/utilities/make-github-readme/README.md' + location.hash;
 
 </script>
 </body>
