--- a/tootoo/r3/dev/index.html
+++ b/tootoo/r3/dev/index.html
@@ -8,7 +8,7 @@
 
 //	window.location.href = 'tootoo3-basic.html' + location.hash;
 //	window.location.href = 'tootoo3-basic.html#tootoo3/dev/test.md';
-	window.location.href = 'tootoo3-basic.html#';
+	window.location.href = '../../../index.html#tootoo/r3/dev/README.md';
 
 
 
