--- a/tootoo/r3/dev-custom/index.html
+++ b/tootoo/r3/dev-custom/index.html
@@ -6,7 +6,8 @@
 <body>
 <script>
 
-window.location.href = './tootoo3-basic.html' + location.hash;
+//window.location.href = './tootoo3-basic.html' + location.hash;
+	window.location.href = '../../../index.html#tootoo/r3/dev-custom/README.md';
 
 </script>
 </body>
