--- a/tootoo/r3/dev-custom/tootoo3-pushme-pullyou.html
+++ b/tootoo/r3/dev-custom/tootoo3-pushme-pullyou.html
@@ -77,10 +77,13 @@
 * [Read Me]( #dabdab/README.md )
 ### TooToo
 * [TooToo Read Me]( #tootoo/README.md )
-* [All in One]( #tootoo/r3/all-in-one/README.md )
-* [All in One Custom]( #tootoo/r3/all-in-one-custom/README.md )
-### Utilities
-* [Utilities Read Me]( #tootoo/utilities/README.md )
+* [All in One Read Me]( #tootoo/r3/all-in-one/README.md )
+* [All in One Custom Read Me]( #tootoo/r3/all-in-one-custom/README.md )
+* [All in One Select Read Me]( #tootoo/r3/all-in-one-select/README.md )
+* [Dev Read Me]( #tootoo/r3/dev/README.md )
+* [Dev Custom Read Me]( #tootoo/r3/dev-custom/README.md )
+#### TooToo Utilities
+* [Utilities Read Me]( #tootoo/r3/utilities/README.md )
 * [get-github-dir-names]( #tootoo/r3/utilities/get-github-dir-names/README.md )
 * [Make Read Me Read Me]( #tootoo/r3/utilities/make-github-readme/README.md )
 * [Merge Files into one]( #tootoo/r3/utilities/merge-files-into-one/README.md )
