--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 
-<meta name=date content='2017-5-23 20:26' >
+<meta name=date content='2017-5-23 21:20' >
 
 <!--
 
@@ -60,7 +60,7 @@ summary h3 { display: inline; }
 #hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px;  z-index: 1 }
 #hamburger h2, #menu h2, #menu h4 {margin: 0; }
 
-#ifr { border: 0px yellow solid; height: 100%; width: 100%; }
+#ifr { border: 0px yellow solid; height: 500px; width: 100%; }
 
 #menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }
 #menu ul { margin:0; padding-left:20px; }
