--- a/tootoo/r3/dev-custom/tootoo3-pushme-pullyou.html
+++ b/tootoo/r3/dev-custom/tootoo3-pushme-pullyou.html
@@ -4,10 +4,10 @@
 <meta charset=utf-8 >
 <title>PushMe-PullYou</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
+<meta name=description content='Browse and view files all over GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 
-<meta name=date content='2017-05-14' >
+<meta name=date content='2017-05-27' >
 
 <link rel=stylesheet href=../dev/style3.css >
 
