update readme dabdab

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ summary h3 { display: inline; }
 #hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px;  z-index: 1 }
 #hamburger h2, #menu h2, #menu h4 {margin: 0; }
 
-#ifr { border: 0px yellow solid; height: 500px; width: 100%; }
+#ifr { /* border: 0px #ccc solid; */ height: 500px; width: 100%; }
 
 #menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }
 #menu ul { margin:0; padding-left:20px; }
