tootoo moving files

--- a/tootoo/r3/index.html
+++ b/tootoo/r3/index.html
@@ -7,7 +7,8 @@
 <script>
 
 //	window.location.href = './dev/tootoo3-basic.html' + location.hash;
-	window.location.href = './dev/tootoo3-basic.html#tootoo/README.md';
+//	window.location.href = './dev/tootoo3-basic.html#tootoo/README.md';
+	window.location.href = '../../index.html#tootoo/README.md';
 </script>
 </body>
 </html>
