--- a/tootoo/r3/dev-custom/tootoo3-pushme-pullyou.html
+++ b/tootoo/r3/dev-custom/tootoo3-pushme-pullyou.html
@@ -77,11 +77,12 @@
 * [Read Me]( #dabdab/README.md )
 ### TooToo
 * [TooToo Read Me]( #tootoo/README.md )
-* [All in One Read Me]( #tootoo/r3/all-in-one/README.md )
-* [All in One Custom Read Me]( #tootoo/r3/all-in-one-custom/README.md )
-* [All in One Select Read Me]( #tootoo/r3/all-in-one-select/README.md )
+####TooToo Versions
 * [Dev Read Me]( #tootoo/r3/dev/README.md )
 * [Dev Custom Read Me]( #tootoo/r3/dev-custom/README.md )
+* [Dev Select Read Me]( #tootoo/r3/dev-select/README.md )
+* [All in One Read Me]( #tootoo/r3/all-in-one/README.md )
+* [All in One Custom Read Me]( #tootoo/r3/all-in-one-custom/README.md )
 #### TooToo Utilities
 * [Utilities Read Me]( #tootoo/r3/utilities/README.md )
 * [get-github-dir-names]( #tootoo/r3/utilities/get-github-dir-names/README.md )
