--- a/tootoo/r3/dev-choose/index.html
+++ b/tootoo/r3/dev-choose/index.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-window.location.href = './tootoo/r3/dev-choose/tootoo4-choose.html' + location.hash;
+window.location.href = '../../../index.html#tootoo/r3/dev-choose/README.md';
 
 </script>
 </body>
