--- a/tootoo/r3/dev-custom/tootoo3-pushme-pullyou.html
+++ b/tootoo/r3/dev-custom/tootoo3-pushme-pullyou.html
@@ -79,6 +79,7 @@
 * [TooToo Read Me]( #tootoo/README.md )
 #### TooToo Versions
 * [Dev Read Me]( #tootoo/r3/dev/README.md )
+* [Dev Choose Read Me]( #tootoo/r3/dev-choose/README.md )
 * [Dev Custom Read Me]( #tootoo/r3/dev-custom/README.md )
 * [Dev Select Read Me]( #tootoo/r3/dev-select/README.md )
 * [All in One Read Me]( #tootoo/r3/all-in-one/README.md )
