update pp index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name=description content='Browse and view files all over GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 
-<meta name=date content='2017-5-27 14:45' >
+<meta name=date content='2017-5-28 20:45' >
 
 <!--
 
@@ -18,8 +18,7 @@ TooToo is a JavaScript app that helps you browse through GitHub repositories and
 
 It's part of the Pushme-Pullyou collection of JavaScript files: https://pushme-pullyou.github.io/
 
-See TooToo Read Me:/ https://pushme-pullyou.github.io/tootoo/
-
+This Read Me is embedded in every TooToo All-in-One script. For details see the main TooToo Read Me:/ https://pushme-pullyou.github.io/tootoo/
 
 Copyright © 2017 Pushme Pullyou authors. MIT License.
 
@@ -848,6 +847,7 @@ console.log( '', response  );
 * [TooToo Read Me]( #tootoo/README.md )
 #### TooToo Versions
 * [Dev Read Me]( #tootoo/r3/dev/README.md )
+* [Dev Choose Read Me]( #tootoo/r3/dev-choose/README.md )
 * [Dev Custom Read Me]( #tootoo/r3/dev-custom/README.md )
 * [Dev Select Read Me]( #tootoo/r3/dev-select/README.md )
 * [All in One Read Me]( #tootoo/r3/all-in-one/README.md )
