--- a/tootoo/r4/dev-repo/tootoo4-basic.html
+++ b/tootoo/r4/dev-repo/tootoo4-basic.html
@@ -16,6 +16,7 @@
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
 <script src=../dev/tootoo4.js ></script>
 <script src=../dev/menu4.js ></script>
+<script src=../dev/select-users4.js ></script>
 <script src=../dev/contents4.js ></script>
 <!--
 <script src=repo-the-jsway.js ></script>
@@ -99,12 +100,19 @@
 	};
 */
 
+
 	init();
 
 	function init() {
 
 		mnuTitle.innerHTML = user.title ? user.title : user.user;
 		mnuTagline.innerHTML = '<small><p>' + document.head.querySelector( "[name=description]" ).content + '</p></small>';
+
+
+
+		SEL.initSelectUsers();
+
+		SEL.getRepoOptions();
 
 		TOO.initUser();
 
