--- a/tootoo/r4/dev-repo/list-of-files.html
+++ b/tootoo/r4/dev-repo/list-of-files.html
@@ -61,7 +61,7 @@ console.log( 'u', user, 'p', path );
 
 			file = files[ i ].name;
 
-			if ( file.endsWith( '.html') || file.endsWith( '.htm') ) {
+			if ( file.endsWith( '.js') ) {
 
 				fileList.innerHTML += file.link( urlFolder + file ) + '<br>';
 
