--- a/tootoo/r3/utilities/get-github-dir-names/index.html
+++ b/tootoo/r3/utilities/get-github-dir-names/index.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-window.location.href = '../../../../index.html#tootoo/r3/utilities/get-github-dir-names/README.md' + location.hash;
+window.location.href = '../../../index.html#tootoo/r4/library/README.md';
 
 </script>
 </body>
