--- a/tootoo/r4/dev/index.html
+++ b/tootoo/r4/dev/index.html
@@ -6,11 +6,27 @@
 <body>
 <script>
 
-//	window.location.href = 'tootoo3-basic.html' + location.hash;
-//	window.location.href = 'tootoo3-basic.html#tootoo3/dev/test.md';
-	window.location.href = '../../../index.html#tootoo/r3/dev/README.md';
+//	let protocol, usr, firstDot, path;
 
+	protocol = location.protocol;
 
+	if ( protocol === 'file:' ) {
+
+		firstDot = location.pathname.indexOf( 'github.io' );
+		usr = location.pathname.slice( 0, firstDot - 1 );
+		usr = usr.slice( usr.lastIndexOf( '/' ) + 1 );
+
+		path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
+
+	} else if ( protocol.includes( 'http' ) ) {
+
+		firstDot = location.hostname.indexOf( '.github.io' );
+		usr = location.hostname.slice( 0, firstDot );
+		path = location.pathname.slice( 1, location.pathname.lastIndexOf( '/' )  );
+
+	}
+
+	window.location.href = path.replace( /-/g, '' ).replace( /\w+/g, '..' ) + '/index.html#' + path + '/README.md';
 
 </script>
 </body>
