--- a/tootoo/r4/dev/tootoo4-basic.html
+++ b/tootoo/r4/dev/tootoo4-basic.html
@@ -2,7 +2,7 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo4 Library</title>
+<title>TooToo4 Basic</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
@@ -64,8 +64,11 @@
 
 	function init() {
 
-		mnuTitle.innerHTML = document.title;
-		mnuTagline.innerHTML = '<small><p>' + document.head.querySelector( "[name=description]" ).content + '</p></small>';
+		let tagLine;
+
+		tagLine = user.tagLine ? user.tagLine : document.head.querySelector( "[name=description]" ).content;
+		mnuTitle.innerHTML = user.title ? user.title : user.user;
+		mnuTagline.innerHTML = '<small><p>' + tagLine + '</p></small>';
 
 		TOO.initUser();
 
