--- a/tootoo/r4/dev/tootoo4-basic.html
+++ b/tootoo/r4/dev/tootoo4-basic.html
@@ -17,7 +17,10 @@
 <script src=../dev/tootoo4.js ></script>
 <script src=../dev/menu4.js ></script>
 <script src=../dev/contents4.js ></script>
+<!--
 <script src=../dev-repo/repo-pushme-pullyou.js ></script>
+-->
+<script src=../dev-repo/repo-ladybug-web.js ></script>
 
 	<div id=container >
 
